--- a/mySite/config.toml
+++ b/mySite/config.toml
@@ -1,9 +1,9 @@
-languageCode = "en-us"
-title = "Massively"
+languageCode = "en-uk"
+title = "OldStreet.ai"
 baseURL = "http://localhost:1313/"
 theme = "../.."
-googleanalytics = "UA-113904582-3"
-disqusShortname = "hugo-massively"
+#googleanalytics = "UA-113904582-3"
+#disqusShortname = "hugo-massively"
 
 # [params]
   # set below parameter to define a favicon
@@ -18,9 +18,9 @@ disqusShortname = "hugo-massively"
 [languages]
 [languages.en]
   languageName = "English"
-[languages.es]
-  languageName = "Español"
-  title = "Massively - Versión Español"
+#[languages.es]
+#  languageName = "Español"
+#  title = "Massively - Versión Español"
 #[languages.fr]
 #  languageName = "Français"
 #  title = "Massively - Version Française"
