--- a/mySite/data/en/intro.yaml
+++ b/mySite/data/en/intro.yaml
@@ -1,7 +1,5 @@
 title:
-- line: 'This is'
-- line: 'Massively'
+- line: 'OldStreet.ai'
 
 description:
-- line: 'A free, fully responsive HTML5 + CSS3 site template designed by @ajlkn for HTML5 UP'
-- line: 'and released for free under the Creative Commons license.'
+- line: 'A boutique machine learning consultancy.'
