--- a/mySite/config-prod.toml
+++ b/mySite/config-prod.toml
@@ -1,9 +1,9 @@
-languageCode = "en-us"
-title = "Massively"
-baseURL = "https://hugo-theme-massively.netlify.com/"
+languageCode = "en-uk"
+title = "OldStreet.ai"
+baseURL = "https://oldstreet.ai/"
 theme = "../.."
-googleanalytics = "UA-113904582-4"
-disqusShortname = "hugo-massively"
+googleanalytics = "UA-124573011-1"
+#disqusShortname = "hugo-massively"
 
 # [params]
   # set below parameter to define a favicon
@@ -18,9 +18,9 @@ disqusShortname = "hugo-massively"
 [languages]
 [languages.en]
   languageName = "English"
-[languages.es]
-  languageName = "Español"
-  title = "Massively - Versión Español"
+#[languages.es]
+#  languageName = "Español"
+#  title = "Massively - Versión Español"
 #[languages.fr]
 #  languageName = "Français"
 #  title = "Massively - Version Française"
