--- a/data/en/intro.yaml
+++ b/data/en/intro.yaml
@@ -2,4 +2,4 @@ title:
 - line: 'OldStreet.ai'
 
 description:
-- line: 'A boutique machine learning consultancy.'
+- line: 'A boutique machine learning consultancy in London.'
