--- a/data/en/intro.yaml
+++ b/data/en/intro.yaml
@@ -1,5 +1,5 @@
 title:
-- line: 'OldStreet.ai'
+- line: 'Old Street AI'
 
 description:
 - line: 'A boutique machine learning consultancy in London.'
